Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47593

Service UUID not filled under Linux

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.1
    • 5.5.0
    • None
    • bluez 5.23-2b1
      Linux 4.0.0-2-amd64
      Qt 5.5.0 (Qt build)

    Description

      I'm trying to connect to a service on a device but after providing the QBluetoothServiceInfo to connectToService on QBluetoothSocket I got:

      qt.bluetooth: No port, no PSM, and no UUID provided, unable to connect

      asking the UUID of the info, shows a 0000..0000 invalid UUID, listing the service info attributes shows (1, 4, 256) in which ServiceId = 3 is not listed so the QBluetoothServiceInfo was not properly filled.

      Introspecting bluez it shows the right Services UUIDs, but manually setting it I get:

      qt.bluetooth: Starting discovery
      qt.bluetooth: UUID filter ("

      {00001101-0000-1000-8000-00805f9b34fb}

      ")
      qt.bluetooth.bluez: Discovery on: "20:15:04:10:02:08" Mode: 1
      qt.bluetooth: Socket discovery finished
      qt.bluetooth: Didn't find any

      Which might be another issue...

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-47593
          # Subject Branch Project Status CR V

          Activity

            People

              ablasche Alex Blasche
              dantti Daniel Nicoletti
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes